fixed projects animation, struggled with z-index and applied more responsiveness

--- a/styles/firstsection.sass
+++ b/styles/firstsection.sass
@@ -1,10 +1,11 @@
 @import variables
 .small-text
-    font-size: 2em
+
+    font-size: 1.5vw
 .medium-text
-    font-size: 3rem
+    font-size: 3vw
 .large-text
-    font-size: 4rem
+    font-size: 5vw
     a
         text-decoration: none
         color: white
