--- a/styles/global.sass
+++ b/styles/global.sass
@@ -10,9 +10,12 @@ body
     background-color: $body-bg-color
     height: 100%
     width: 100%
+    position: relative
+    z-index: 0
 html
     height: 100%
     width: 100%
+    z-index: 1
 section
     height: 100vh
 
