--- a/styles/thirdsection.sass
+++ b/styles/thirdsection.sass
@@ -15,4 +15,4 @@
     color: #d4d4d4
     text-decoration: none
 .contact
-    margin: 10px 0
+    margin: 5px 0
